Wrap button in anchor tag for navigation تحديث 2
Added a link around the button to navigate to data.html.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         <h3>دحيح الدفعه موقع هيحسن دراجاتك</h3>.
     </p>
 
+    <a href="data.html">
     <button>ابدأ الآن</button>
+</a>
+
 
 </body>
 
 </html>
+
