Modify navigation and add button for study plan تحديث 5
Updated navigation links and added a button to create a study plan.

--- a/index.html
+++ b/index.html
@@ -84,9 +84,12 @@
 <header>
   <h1>دحيح الدفعة</h1>
   <nav>
-    <a href="#about">عن المشروع</a>
+    <p>
+    <a href="about.html">عن المشروع</a>
+</p>
+
     <a href="#student">بيانات الطالب</a>
-    <a href="#plan">خطة المذاكرة</a>
+    <a href="plan">خطة المذاكرة</a>
   </nav>
 </header>
 
@@ -116,8 +119,10 @@
 
     <label>المواد الدراسية:</label>
     <input type="text" placeholder="مثال: عربي، رياضة، فيزياء">
-
+     
+    <a href="result.html">
     <button>إنشاء خطة مذاكرة</button>
+    </a>
   </section>
 
   <section id="plan">
