--- a/about.html
+++ b/about.html
@@ -1,59 +1,90 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <title>عن مشروع دحيح الدفعة</title>
+  <meta charset="UTF-8">
+  <title>دحيح الدفعة - عن المشروع</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      direction: rtl;
+      background: linear-gradient(135deg, #ffecd2, #fcb69f);
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 50px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    h1, h2 {
+      color: #2c3e50;
+    }
+
+    p, li {
+      font-size: 18px;
+      line-height: 1.8;
+    }
+
+    ul {
+      text-align: right;
+      padding-right: 20px;
+    }
+
+    a {
+      color: #3498db;
+      text-decoration: none;
+    }
+  </style>
 </head>
+
 <body>
 
-    <h1>عن مشروع دحيح الدفعة</h1>
+<div class="container">
+  <h1>عن مشروع دحيح الدفعة</h1>
 
-    <h2>فكرة المشروع</h2>
-    <p>
-        مشروع <strong>دحيح الدفعة</strong> هو موقع إلكتروني تعليمي
-        يهدف إلى مساعدة الطلاب على تنظيم مذاكرتهم بطريقة ذكية
-        وسهلة، من خلال تحليل بيانات الطالب الدراسية واقتراح
-        خطة مذاكرة مناسبة لقدراته ووقته.
-    </p>
+  <h2>فكرة المشروع</h2>
+  <p>
+    مشروع <strong>دحيح الدفعة</strong> هو موقع تعليمي يساعد الطلاب على تنظيم المذاكرة
+    واقتراح خطة مناسبة حسب مستواهم والمواد التي يدرسونها.
+  </p>
 
-    <h2>المشكلة</h2>
-    <p>
-        يعاني كثير من الطلاب من عدم وجود خطة مذاكرة واضحة،
-        وعدم معرفة المواد التي تحتاج إلى تركيز أكبر،
-        مما يؤدي إلى إهدار الوقت وضعف التحصيل الدراسي.
-    </p>
+  <h2>المشكلة</h2>
+  <p>
+    كثير من الطلاب لا يعرفون كيفية ترتيب مذاكرتهم أو توزيع وقتهم بين المواد،
+    مما يؤدي إلى تشتت التركيز وضعف التحصيل.
+  </p>
 
-    <h2>الحل</h2>
-    <p>
-        يوفر موقع <strong>دحيح الدفعة</strong> نموذجًا بسيطًا يسمح للطالب
-        بإدخال المواد الدراسية ودرجاته وعدد ساعات المذاكرة،
-        ثم يقدم خطة مذاكرة مبدئية ونصائح تعليمية تساعده
-        على تحسين مستواه الدراسي.
-    </p>
+  <h2>الحل</h2>
+  <p>
+    يوفر الموقع نموذجًا بسيطًا لإدخال بيانات الطالب والمواد الدراسية،
+    ثم اقتراح خطة مذاكرة مبدئية تساعد الطالب على تنظيم وقته بطريقة ذكية.
+  </p>
 
-    <h2>هدف المشروع</h2>
+  <h2>هدف المشروع</h2>
+  <ul>
+    <li>مساعدة الطلاب على المذاكرة بذكاء</li>
+    <li>تنظيم الوقت وتحسين إدارة المذاكرة</li>
+    <li>استخدام التكنولوجيا لدعم التعليم</li>
+  </ul>
+
+   <h2>العاملين علي المشروع</h2>
     <ul>
-        <li>مساعدة الطلاب على المذاكرة بذكاء</li>
-        <li>تنظيم الوقت وتحسين إدارة المذاكرة</li>
-        <li>استخدام التكنولوجيا في دعم التعليم</li>
+        <li>توفيق ربنا </li>
+        <li>انا</li>
+        <li>انا و اعوذ بالله من كلمه انا </li>
     </ul>
 
-    <h2>العاملين في المشروع</h2>
-    <ul>
-        <li>المؤلف : انا</li>
-        <li>الكاتب : انا </li>
-        <li>المبرمج : انا</li>
-    </ul>
+  <a href="index.html">العودة للرئيسية</a>
+</div>
 
-    <h2>نبذا عني</h2>
-    <h3>انا انسان عادي دراجاتي عاديه تقريبا 
-        هدفي في الحياه هو الي بعملوا دلوقتي
-        وبعمل المشروع دا لتطوير امكانياتي طبعا 
-        انا كنت في الاول ضايع لكن حبه فيديوهات و حبه شات جي بي تي 
-        ساعدني <br>
-        كلمه من اختي : بتمنى لك التوفيق و التفوق <br>
-        كلمه من امي ست الكل : ربنا يجبر بخاطرك و يوفقك 
-        و يكتبلك السعاده و التفوق 
-    </h3>
+
 </body>
 </html>
