--- a/result.html
+++ b/result.html
@@ -1,28 +1,84 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <title>الخطة المقترحة</title>
+  <meta charset="UTF-8">
+  <title>دحيح الدفعة - خطة المذاكرة</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      direction: rtl;
+      background: linear-gradient(135deg, #a1c4fd, #c2e9fb);
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 50px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    h1, h2 {
+      color: #2c3e50;
+    }
+
+    p, li {
+      font-size: 18px;
+      line-height: 1.8;
+    }
+
+    ul {
+      text-align: right;
+      padding-right: 20px;
+    }
+
+    a {
+      color: #3498db;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    button {
+      background-color: #3498db;
+      color: white;
+      border: none;
+      padding: 12px 25px;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #2980b9;
+    }
+  </style>
 </head>
+
 <body>
 
-    <h1>الخطة المقترحة للطالب</h1>
+<div class="container">
+  <h1>خطة المذاكرة للطالب</h1>
 
-    <p>
-        بناءً على البيانات التي أدخلتها،
-        نقترح عليك:
-    </p>
+  <p>هنا مثال لخطة مذاكرة مبدئية لكل مادة حسب الصف الدراسي والمواد المدخلة:</p>
 
-    <ul>
-        <li>التركيز أكثر على المواد ذات الدرجات الأقل</li>
-        <li>المذاكرة ساعتين يوميًا على الأقل</li>
-        <li>حل أسئلة بعد كل درس</li>
-    </ul>
+  <ul>
+    <li>العربي: 1 ساعة يوميًا + مراجعة قبل الامتحانات</li>
+    <li>الرياضة: 45 دقيقة يوميًا + تمارين تطبيقية</li>
+    <li>الفيزياء: ساعة ونصف يوميًا + حل مسائل</li>
+    <li>الكيمياء: ساعة يوميًا + تلخيص الدروس</li>
+  </ul>
 
-    <p>
-        هذه الخطة مبدئية ويمكن تطويرها لاحقًا
-        باستخدام الذكاء الاصطناعي.
-    </p>
+  <a href="data.html"><button>تعديل البيانات</button></a>
+  <a href="index.html"><button>العودة للرئيسية</button></a>
+</div>
 
 </body>
 </html>
