--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
 <div class="container">
     <h1>دحيح الدفعه</h1>
   <p>
-    موقع يساعد الطالب على تنظيم المذاكرة
-    واقتراح خطة مناسبة بناءً على مستواه.
+     متضيعش وقتك في التفكير في ازاي تذاكر احنا هنحل المشكله عندنا.
   </p>
   <a href="data.html"><button>ابدأ الآن</button></a>
 </div>
