--- a/result.html
+++ b/result.html
@@ -5,6 +5,70 @@
 <title>دحيح الدفعة - خطة المذاكرة</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+  body { font-family: Arial,sans-serif; direction:rtl; background:linear-gradient(135deg,#a1c4fd,#c2e9fb); margin:0; padding:0;}
+  .container { max-width:800px; margin:40px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.15);}
+  h1 {text-align:center;color:#2c3e50;}
+  ul {font-size:18px; line-height:1.8;}
+  button {background:#3498db;color:white;border:none;padding:10px 20px;font-size:16px;border-radius:6px;cursor:pointer;margin-top:20px;}
+</style>
+</head>
+<body>
+
+<div class="container">
+  <h1>خطة المذاكرة الأسبوعية</h1>
+  <div id="plan"></div>
+  <a href="data.html"><button>تعديل البيانات</button></a>
+</div>
+
+<script>
+const grade = localStorage.getItem("grade");
+const section = localStorage.getItem("section");
+const subjects = JSON.parse(localStorage.getItem("subjects"));
+const planDiv = document.getElementById("plan");
+
+const scienceSubjects = ["فيزياء","كيمياء","أحياء","رياضيات","العلوم المتكاملة"];
+const literarySubjects = ["تاريخ","جغرافيا","فلسفة ومنطق","إحصاء","اللغة العربية"];
+
+if(!grade || !subjects) { planDiv.innerHTML="<p>لا توجد بيانات كافية.</p>"; }
+else {
+  let dailyHours = 2.5; 
+  if(grade==="second") dailyHours=3.5;
+  if(grade==="third") dailyHours=5;
+
+  // الأوزان
+  let totalWeight=0; const subjectWeights={};
+  subjects.forEach(sub=>{
+    if(scienceSubjects.includes(sub)) subjectWeights[sub]=2;
+    else subjectWeights[sub]=1;
+    totalWeight+=subjectWeights[sub];
+  });
+
+  const days=["السبت","الأحد","الاثنين","الثلاثاء","الأربعاء","الخميس"];
+  let html=`<p><strong>عدد ساعات المذاكرة اليومية:</strong> ${dailyHours} ساعة</p>`;
+  html+=`<h3>📅 جدول المذاكرة الأسبوعي:</h3>`;
+
+  days.forEach(day=>{
+    html+=`<h4>${day}</h4><ul>`;
+    subjects.forEach(sub=>{
+      const time=((subjectWeights[sub]/totalWeight)*dailyHours).toFixed(1);
+      html+=`<li>${sub}: ${time} ساعة</li>`;
+    });
+    html+="</ul>";
+  });
+
+  planDiv.innerHTML=html;
+}
+</script>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+<meta charset="UTF-8">
+<title>دحيح الدفعة - خطة المذاكرة</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
   body { font-family: Arial,sans-serif; direction:rtl; background:linear-gradient(135deg,#a1c4fd,#c2e9fb); margin:0; padding:0;}
   .container { max-width:800px; margin:40px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.15);}
   h1 {text-align:center;color:#2c3e50;}
@@ -62,3 +126,4 @@ else {
 
 </body>
 </html>
+
