--- a/index.html
+++ b/index.html
@@ -1,99 +1,24 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>دحيح الدفعة</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      direction: rtl;
-      background: linear-gradient(135deg, #74ebd5, #ACB6E5);
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 15px;
-      text-align: center;
-    }
-
-    nav a {
-      color: white;
-      margin: 0 10px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 50px auto;
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    h1 {
-      color: #2c3e50;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 18px;
-      line-height: 1.8;
-      margin-bottom: 30px;
-    }
-
-    button {
-      background-color: #3498db;
-      color: white;
-      border: none;
-      padding: 12px 25px;
-      font-size: 18px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background-color: #2980b9;
-    }
-
-    footer {
-      text-align: center;
-      padding: 15px;
-      margin-top: 50px;
-      color: white;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>دحيح الدفعة</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+  body { font-family: Arial,sans-serif; direction: rtl; background: linear-gradient(135deg,#f6d365,#fda085); margin:0; padding:0; text-align:center;}
+  .container { max-width: 700px; margin: 100px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.15);}
+  h1 {color:#2c3e50;}
+  button {margin-top:30px; padding:15px 30px; font-size:20px; border:none; border-radius:8px; background:#3498db; color:white; cursor:pointer;}
+  button:hover {background:#2980b9;}
+</style>
 </head>
-
 <body>
 
-<header>
-  <h1>دحيح الدفعة</h1>
-  <nav>
-    <a href="about.html">عن المشروع</a>
-    <a href="data.html">بيانات الطالب</a>
-  </nav>
-</header>
-
 <div class="container">
-    <h1>دحيح الدفعه</h1>
-  <p>
-     متضيعش وقتك في التفكير في ازاي تذاكر احنا هنحل المشكله عندنا.
-  </p>
-  <a href="data.html"><button>ابدأ الآن</button></a>
+  <h1>المساعد الذكي للطالب</h1>
+  <p>موقع يساعدك على تنظيم المذاكرة واقتراح خطة ذكية أسبوعية حسب صفك والمواد المختارة.</p>
+  <button onclick="location.href='data.html'">ابدأ الآن</button>
 </div>
-
-<footer>
-  مشروع طلابي – مسابقة البرمجة والذكاء الاصطناعي
-</footer>
 
 </body>
 </html>
