--- a/index.html
+++ b/index.html
@@ -1,22 +1,67 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="UTF-8">
-<title>دحيح الدفعة</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  body { font-family: Arial,sans-serif; direction: rtl; background: linear-gradient(135deg,#f6d365,#fda085); margin:0; padding:0; text-align:center;}
-  .container { max-width: 700px; margin: 100px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.15);}
-  h1 {color:#2c3e50;}
-  button {margin-top:30px; padding:15px 30px; font-size:20px; border:none; border-radius:8px; background:#3498db; color:white; cursor:pointer;}
-  button:hover {background:#2980b9;}
-</style>
+  <meta charset="UTF-8">
+  <title>دحيح الدفعة</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      direction: rtl;
+      background: linear-gradient(135deg, #f6d365, #fda085);
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    .container {
+      max-width: 700px;
+      margin: 100px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 15px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    button {
+      margin-top: 30px;
+      padding: 15px 30px;
+      font-size: 20px;
+      border: none;
+      border-radius: 8px;
+      background: #3498db;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #2980b9;
+    }
+  </style>
 </head>
+
 <body>
 
+<header>
+  <h1>دحيح الدفعة</h1>
+  <nav>
+    <a href="index.html">الرئيسية</a>
+    <a href="about.html">عن المشروع</a>
+  </nav>
+</header>
+
 <div class="container">
-  <h1>المساعد الذكي للطالب</h1>
-  <p>موقع يساعدك على تنظيم المذاكرة واقتراح خطة ذكية أسبوعية حسب صفك والمواد المختارة.</p>
+  <h1>دحيح الدفعه</h1>
+  <p>نتفكرش ازاي تذاكر احنا هنا هنفكر مكانك.</p>
   <button onclick="location.href='data.html'">ابدأ الآن</button>
 </div>
 
